--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { 
+    height: 100vh;
+}
+
 body { 
+    background: url('./assets/Locator_Grid.png') center repeat;
     margin: 0; 
     font-family: 'Oswald', sans-serif;
 }
