--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <header>
-    <div class="title-backing">
-      <label class="byline">
-        <h1 class="app-title">{{ title }}</h1>
-        <h2 class="app-subtitle">{{ subtitle }}</h2>
-        by: {{ credits }}
-      </label>
-    </div>
-  </header>
-  <div class="terrarium">
-    <img alt="Welcome" src="../assets/turtle.png" class="tarrasque">
-  </div>
+<div class="app">   
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
