--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -1,4 +1,5 @@
-<p>
-  canvas works!
-</p>
-<router-outlet></router-outlet>
+<div id="generator-interface">
+  <p>canvas works!</p>
+  <app-options-form></app-options-form>
+  <router-outlet></router-outlet>
+</div>
