--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,3 +1,9 @@
+.splash {
+    background: url('../../assets/Locator_Grid.png') repeat;
+    height: 100vh;
+    margin: 0;
+}
+
 .app-title, .app-subtitle, .byline {
     position: relative;
 }
