--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,16 +1,20 @@
-<header>
-  <div class="title-backing">
-    <label class="byline">
-      <h1 class="app-title">{{ title }}</h1>
-      <h2 class="app-subtitle">{{ subtitle }}</h2>
-      system by: {{ credits }}
+<div class="splash">
+  <header>
+    <div class="title-backing">
+      <label class="byline">
+        <h1 class="app-title">{{ title }}</h1>
+        <h2 class="app-subtitle">{{ subtitle }}</h2>
+        system by: {{ credits }}
+        <br>
+        web app by: Jake Peacock
+      </label>
+    </div>
+  </header>
+  <a routerLink="/canvas">
+    <button mat-stroked-button color="primary" (click)="enter()" type="button" class="terrarium">
+      <img alt="Welcome" src="../assets/turtle.png" class="tarrasque">
       <br>
-      web app by: Jake Peacock
-    </label>
-  </div>
-</header>
-<button mat-stroked-button color="primary" (click)="enter()" type="button" class="terrarium">
-  <img alt="Welcome" src="../assets/turtle.png" class="tarrasque">
-  <br>
-  Roll the Bones
-</button>
+      Roll the Bones
+    </button>
+  </a>
+</div>
