--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body { 
-    height: 100vh;
+html {
+    margin: 0;
 }
 
 body { 
-    margin: 0; 
+    height: 100vh;
     font-family: 'Oswald', sans-serif;
+    margin: 0;
 }
