--- a/src/app/components/canvas/canvas.component.html
+++ b/src/app/components/canvas/canvas.component.html
@@ -1,5 +1,15 @@
 <div id="generator-interface">
-  <p>canvas works!</p>
   <app-options-form></app-options-form>
+  <canvas class="grid-holder">
+    <mat-grid-list cols="[grid_width]">
+      <mat-grid-tile
+        *ngFor="let tiles of tile"
+        [colspan]="tile.tileX"
+        [rowspan]="tile.tileY"
+        [style.background]="tile.color">
+       
+      </mat-grid-tile>
+    </mat-grid-list>
+  </canvas>
   <router-outlet></router-outlet>
 </div>
